--- a/HandsOn_ISMRM_MoCo_Workshop.ipynb
+++ b/HandsOn_ISMRM_MoCo_Workshop.ipynb
@@ -43,6 +43,29 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "**Attention:** If you are running this code in Google Colab, at the end of the installation you should receive a message that the kernel has crashed and restarted. This kernel restart is required so that all installed libraries work correctly.\n",
+        "\n",
+        "Afterwards you can continue with [Imports](#Imports)."
+      ],
+      "metadata": {
+        "id": "naGZmfXKPrps"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%bash\n",
+        "export USE_OPTOX=false  # [false | true]: optox is only needed if you want to work with the MERLIN provided functions for conjugate gradient etc."
+      ],
+      "metadata": {
+        "id": "fZSDVFGJPv7R"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "5XF7IHU9n35Z"
       },
@@ -60,7 +83,7 @@
       "outputs": [],
       "source": [
         "%%bash\n",
-        "apt-get install doxygen"
+        "# apt-get install doxygen"
       ]
     },
     {
@@ -606,23 +629,12 @@
         "id": "ThDfjT4Hqxms"
       },
       "source": [
-        "**ATTENTION:** Please make sure that you have restarted the Jupyter kernel after installation of the above libraries. Otherwise, the installed libraries will not be found. You can restart the kernel with:\n",
+        "**ATTENTION:** Please make sure that you have restarted the Jupyter kernel after installation of the above libraries (error message of unexpected crash and restart). Otherwise, the installed libraries will not be found. You can restart the kernel with:\n",
         "\n",
         "```\n",
         "get_ipython().kernel.do_shutdown(True)\n",
         "```\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "vCsCv6scx3zp"
-      },
-      "outputs": [],
-      "source": [
-        "get_ipython().kernel.do_shutdown(True)"
       ]
     },
     {
@@ -2634,14 +2646,20 @@
       "source": [
         "Below is the implementation of the iterative SENSE reconstruction that follows the above formalism. The interface can be used to reconstruction Cartesian and non-Cartesian data - only determined by the definition of the respective forward and adjoint operators.\n",
         "\n",
-        "The Cartesian operators are given by `mriForwardOp()` and `mriAdjointOp()` in `utils/mri.py`, respectively their Tensorflow implementations (needed here for iterative SENSE) as `MulticoilForwardOp` and `MulticoilAdjointOp` in `merlintf.keras.layers.mri`. The non-Cartesian operators are defined as `GPUNUFFTFwd` and `GPUNUFFTAdj` (Tensorflow layers) in `utils/mri.py`.\n",
+        "The Cartesian operators are given by:\n",
+        "- numpy: `mriForwardOp()` and `mriAdjointOp()` in `utils/mri.py`\n",
+        "- Tensorflow: `MulticoilForwardOp` and `MulticoilAdjointOp` in `merlintf.keras.layers.mri`. \n",
         "\n",
-        "The iterative SENSE reconstruction `iterativeSENSE()` in `utisl/mri.py` is automatically executed on GPU (if available) and has the following interface:\n",
+        "The non-Cartesian operators are defined as:\n",
+        "- numpy: `GPUNUFFTOp.forward()` and `GPUNUFFTOp.adjoint()` in class `GPUNUFFTOp` of `utils/mri.py`\n",
+        "- Tensorflow: `GPUNUFFTFwd` and `GPUNUFFTAdj` in `utils/mri.py`.\n",
+        "\n",
+        "The iterative SENSE reconstruction `iterativeSENSE()` in `utisl/mri.py` is automatically executed on GPU (if available and optox is used) and has the following interface:\n",
         "\n",
         "```\n",
         "def iterativeSENSE(kspace, smap=None, mask=None, noisy=None, dcf=None, flow=None,\n",
         "            fwdop=MulticoilForwardOp, adjop=MulticoilAdjointOp,\n",
-        "            add_batch_dim=True, max_iter=10, tol=1e-12, weight_init=1.0, weight_scale=1.0):\n",
+        "            add_batch_dim=True, max_iter=10, tol=1e-12, weight_init=1.0, weight_scale=1.0, use_optox=False):\n",
         "    # kspace        raw k-space data as [X, Y, coils] which will be converted to:\n",
         "    #               Cartesian + no-motion compensation: [batch, coils, X, Y] or [batch, coils, X, Y, Z] or [batch, coils, time, X, Y] or [batch, coils, time, X, Y, Z] (numpy array)\n",
         "    #               Cartesian + motion-compensation / non-Cartesian + no-motion/motion-comp.: [batch, X, Y, coils]\n",
@@ -2668,6 +2686,9 @@
         "id": "uRvXenuDgA5N"
       },
       "source": [
+        "In the following, we will only focus on the numpy implementation (due to RAM limitations and GPU availability), but codes for GPU implementation are also provided (Attention: The GPU implementations require further improvement as currently handovers between CPU and GPU, i.e. type conversion between numpy and Tensorflow are happening).\n",
+        "\n",
+        "\n",
         "We will see two examples below how to perform an iterative SENSE reconstruction for a 2D Cartesian and a 2D non-Cartesian imaging."
       ]
     },
@@ -2697,9 +2718,16 @@
         "smaps = smaps_espirit[:,:,0,:,0]\n",
         "\n",
         "# Cartesian\n",
-        "A = MulticoilForwardOp(center=True, coil_axis=-3, channel_dim_defined=False)\n",
-        "AH = MulticoilAdjointOp(center=True, coil_axis=-3, channel_dim_defined=False)\n",
-        "img_recon = iterativeSENSE(kspace, smaps, fwdop=A, adjop=AH)\n",
+        "if os.getenv(\"USE_OPTOX\") and os.environ[\"USE_OPTOX\"] == \"true\":  # Tensorflow\n",
+        "  A = MulticoilForwardOp(center=True, coil_axis=-3, channel_dim_defined=False)\n",
+        "  AH = MulticoilAdjointOp(center=True, coil_axis=-3, channel_dim_defined=False)\n",
+        "  use_optox = True\n",
+        "else:\n",
+        "  A = mriForwardOp\n",
+        "  AH = mriAdjointOp\n",
+        "  use_optox = False\n",
+        "\n",
+        "img_recon = iterativeSENSE(kspace, smaps, fwdop=A, adjop=AH, use_optox=use_optox)\n",
         "plot(img_recon)"
       ]
     },
@@ -2734,11 +2762,20 @@
         "kpos, dcf = prepare_radial(acc=1, nRead=nRead)\n",
         "\n",
         "# non-Cartesian\n",
-        "A = GPUNUFFTFwd(nRead, kpos, csm, dcf)\n",
-        "AH = GPUNUFFTAdj(nRead, kpos, csm, dcf)\n",
-        "#kspace_radial = np.squeeze(A(numpy2tensor(rss(img_qfov[:,:,0,:]), add_batch_dim=True, add_channel_dim=False)).numpy())\n",
-        "kspace_radial = A.op.op(rss(img_qfov[:,:,0,:]))\n",
-        "img_recon_rad = iterativeSENSE(kspace_radial, csm, kpos, dcf=dcf, fwdop=A, adjop=AH, weight_scale=0.1)\n",
+        "if os.getenv(\"USE_OPTOX\") and os.environ[\"USE_OPTOX\"] == \"true\":  # Tensorflow\n",
+        "  A = GPUNUFFTFwd(nRead, kpos, csm, dcf)\n",
+        "  AH = GPUNUFFTAdj(nRead, kpos, csm, dcf)\n",
+        "  #kspace_radial = np.squeeze(A(numpy2tensor(rss(img_qfov[:,:,0,:]), add_batch_dim=True, add_channel_dim=False)).numpy())\n",
+        "  kspace_radial = A.op.op(rss(img_qfov[:,:,0,:]))\n",
+        "  use_optox = True\n",
+        "else:\n",
+        "  nufft = GPUNUFFTOp(kpos, csm, dcf, nRead)\n",
+        "  A = nufft.forward\n",
+        "  AH = nufft.adjoint\n",
+        "  kspace_radial = nufft.forward(rss(img_qfov[:,:,0,:]))\n",
+        "  use_optox = False\n",
+        "\n",
+        "img_recon_rad = iterativeSENSE(kspace_radial, csm, kpos, dcf=dcf, fwdop=A, adjop=AH, weight_scale=0.1, max_iter=2, use_optox=use_optox)\n",
         "plot(img_recon_rad)"
       ]
     },
@@ -2764,7 +2801,7 @@
         "\n",
         "For a motion-compensated Batchelor-type reconstruction, we first need a simple representation of the motion as a sparse matrix.\n",
         "\n",
-        "This is implemented in `get_sparse_motion_matrix()` (converts dense flow field to sparse motion matrix) and `apply_sparse_motion()` (warps an image via matrix-vector multiplication) from `utils/motioncomp.py`. These functions are invoked from the forward `BatchForwardOp()` $E$ and adjoint `BatchAdjointOp()` $E^H$ operators which are handed over to the iterative SENSE reconstruction `iterativeSENSE()`.\n",
+        "This is implemented in `get_sparse_motion_matrix()` (converts dense flow field to sparse motion matrix) and `apply_sparse_motion()` (warps an image via matrix-vector multiplication) from `utils/motioncomp.py`. In the Cartesian case, these functions are invoked from the forward `BatchForwardOp()` $E$ and adjoint `BatchAdjointOp()` $E^H$ operators which are handed over to the iterative SENSE reconstruction `iterativeSENSE()`.\n",
         "\n",
         "The forward and adjoint operators that take into account the motion model are defined as `BatchForwardOp()` and `BatchAdjointOp()` in `utils/mri.py`.\n",
         "\n",
@@ -3746,7 +3783,7 @@
         "id": "_pmQOdsa6_Sa"
       },
       "source": [
-        "**Task 63:** Perform a motion-compensated image reconstruction for an affine motion on fully-sampled non-Cartesian data. The respective forward and adjoint operators are given in `utils/mri.py` as `BatchGPUNUFFTForwardOp()` and `BatchGPUNUFFTAdjointOp()`. Inside the iterative SENSE reconstruction, you need to use `BatchelorGPUNUFFTFwd` and `BatchelorGPUNUFFTAdj` which are Tensorflow wrappers (i.e. similar to the Cartesian case) around the previously mentioned motion-compensated GPUNUFFT operators.\n",
+        "**Task 63:** Perform a motion-compensated image reconstruction for an affine motion on fully-sampled non-Cartesian data. The respective forward and adjoint operators are given in `utils/mri.py` as `BatchGPUNUFFTForwardOp()` and `BatchGPUNUFFTAdjointOp()`. Inside the iterative SENSE reconstruction, you need to use for Tensorflow: `BatchelorGPUNUFFTFwd` and `BatchelorGPUNUFFTAdj` (Tensorflow wrappers similar to the Cartesian case around the previously mentioned motion-compensated GPUNUFFT operators); for numpy: `BatchGPUNUFFTForwardOp()` and `BatchGPUNUFFTAdjointOp()`.\n",
         "\n",
         "*Hint:* Please refer to the [above](#2DnonCart) example for non-Cartesian iterative SENSE. "
       ]
@@ -3774,6 +3811,7 @@
         "u = get_transform(img_rad, p)\n",
         "u_id_rad = get_transform(img_rad, [0, 0, 0, 0, 1, 1])\n",
         "flow = np.stack([u_id_rad, u], -1)\n",
+        "# TODO sparse flows\n",
         "kpos, dcf = prepare_radial(acc=1, nRead=nRead)\n",
         "\n",
         "# split kpos and dcf into motion states\n",
@@ -3817,6 +3855,7 @@
         "u = get_transform(img_rad, p)\n",
         "u_id_rad = get_transform(img_rad, [0, 0, 0, 0, 1, 1])\n",
         "flow = np.stack([u_id_rad, u], -1)\n",
+        "# TODO sparse flows\n",
         "kpos, dcf = prepare_radial(acc=4, nRead=nRead)\n",
         "\n",
         "# split kpos and dcf into motion states\n",
@@ -3876,6 +3915,7 @@
         "u = get_transform(img_rad, p)\n",
         "u_id_rad = get_transform(img_rad, [0, 0, 0, 0, 1, 1])\n",
         "flow = np.stack([u_id_rad, u], -1)\n",
+        "# TODO sparse flows\n",
         "kpos, dcf = prepare_radial(acc=1, nRead=nRead)\n",
         "\n",
         "# split kpos and dcf into motion states\n",
@@ -3974,6 +4014,7 @@
         "u2 = get_transform(img_rad, p2)\n",
         "u_id_rad = get_transform(img_rad, [0, 0, 0, 0, 1, 1])\n",
         "flow = np.stack([u_id_rad, u, u2], -1)\n",
+        "# TODO sparse flows\n",
         "kpos, dcf = prepare_radial(acc=2, nRead=nRead)\n",
         "\n",
         "# split kpos and dcf into motion states\n",
