--- a/MATLAB/readme
+++ b/MATLAB/readme
@@ -1,3 +1,38 @@
 This MATLAB demo contains code for Generalized Motion Corrected reconstructions, as proposed by Batchelor et. al. 
 Equivalent examples in python are given in the last section of the main jupyter notebook (access via google colab). 
 This MATLAB demo does not cover the problem of motion estimation.
+
+% (c) Gastao Cruz, 2022, University of Michigan
+% (c) Gastao Cruz, 2013-2022, King's College London
+
+%% This script runs a demo of a motion corrected reconstruction, as initially proposed in:
+
+% Batchelor PG, Atkinson D, Irarrazaval P, Hill DL, Hajnal J, Larkman D.
+% Matrix description of general motion correction applied to multishot images.
+% Magnetic Resonance in Medicine: An Official Journal of the International
+% Society for Magnetic Resonance in Medicine. 2005 Nov;54(5):1273-80.
+
+%% This code was initially developed as part of the following studies:
+
+% Cruz G, Atkinson D, Henningsson M, Botnar RM, Prieto C. Highly efficient
+% nonrigid motion‐corrected 3D whole‐heart coronary vessel wall imaging.
+% Magnetic resonance in medicine. 2017 May;77(5):1894-908.
+
+% Cruz G, Atkinson D, Buerger C, Schaeffter T, Prieto C. Accelerated motion 
+% corrected three‐dimensional abdominal MRI using total variation regularized
+% SENSE reconstruction. Magnetic resonance in medicine. 2016 Apr;75(4):1484-98.
+
+%% This demo does not consider the problem of motion estimation. Motion for the 
+%% in-vivo case at the end was estimated via image registration with NiftyReg:
+%% http://cmictig.cs.ucl.ac.uk/wiki/index.php/NiftyReg
+%% More advanced methods registration methods can also be used, like LAPNet:
+%% https://github.com/lab-midas/lapnet
+
+%% A more complete demo on motion artefacts, motion estimation and motion correction
+%% can be found in the python code and associated google colab.
+
+%% You may want to download a newer version of imagine.m, or use any other image viewer (or even just good old imshow).
+
+%% If you have any questions/ suggestions, get in touch with us via
+%% glimadac@med.umich.edu and/or thomas.kuestner@med.uni-tuebingen.de 
+
