--- a/HandsOn_ISMRM_MoCo_Workshop_solution.ipynb
+++ b/HandsOn_ISMRM_MoCo_Workshop_solution.ipynb
@@ -124,7 +124,7 @@
       "source": [
         "# install dependencies\n",
         "! pip install --upgrade pip\n",
-        "! pip install simpleitk git+https://github.com/khammernik/medutils.git python-pysap scikit-image voxelmorph # imjoy \n",
+        "! pip install simpleitk medutils-mri python-pysap scikit-image voxelmorph # imjoy \n",
         "! git clone https://github.com/voxelmorph/voxelmorph.git"
       ]
     },
@@ -180,7 +180,7 @@
       "source": [
         "%%bash\n",
         "apt install libnfft3-dev\n",
-        "pip install gpuNUFFT pynfft2"
+        "pip install gpuNUFFT #pynfft2"
       ]
     },
     {
@@ -667,7 +667,7 @@
         "import espirit\n",
         "\n",
         "import voxelmorph as vxm\n",
-        "import neurite as ne\n",
+        "#import neurite as ne\n",
         "\n",
         "# own utils\n",
         "from utils.flowplotting import *\n",
