--- a/HandsOn_ISMRM_MoCo_Workshop_solution.ipynb
+++ b/HandsOn_ISMRM_MoCo_Workshop_solution.ipynb
@@ -750,7 +750,7 @@
     "import numpy as np\n",
     "from utils.padding import zpad\n",
     "\n",
-    "datapath = '/home/sukuest1/Dropbox/Promotion/Matlab/MotionCorrection/ismrm-moco-workshop/data/brain_slice.npz'  # brain_slice\n",
+    "datapath = '/content/ismrm-moco-workshop/data/brain_slice.npz'  # brain_slice\n",
     "data = np.load(datapath)\n",
     "img = data['arr_0']\n",
     "nRead = np.amax(np.shape(img)[0:2])\n",
@@ -899,7 +899,7 @@
    "outputs": [],
    "source": [
     "img_rss = rss(img)\n",
-    "img_trans = transform_img(img_rss, [10, 5, 0, 0, 1, 1])\n",
+    "img_trans = transform_img(img_rss, [30, 5, 0, 0, 1, 1])\n",
     "plot([img_rss, img_trans])"
    ]
   },
@@ -1481,7 +1481,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "MUGEGu5N8orn"
+    "id": "MUGEGu5N8orn",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
     "## Motion in radial imaging\n",
@@ -2079,7 +2080,7 @@
     "from skimage.metrics import structural_similarity, peak_signal_noise_ratio, mean_squared_error\n",
     "\n",
     "photo = mean_squared_error(img_fixed, img_warped)\n",
-    "ssim = structural_similarity(img_fixed, img_warped)\n",
+    "ssim = structural_similarity(img_fixed, img_warped, data_range=img_fixed.max() - img_fixed.min())\n",
     "psnr = peak_signal_noise_ratio(img_fixed, img_warped)\n",
     "\n",
     "print('Warped to fixed image')\n",
@@ -2088,7 +2089,7 @@
     "print(f'PSNR: {psnr}')\n",
     "\n",
     "photo_m = mean_squared_error(img_moving, img_warped)\n",
-    "ssim_m = structural_similarity(img_moving, img_warped)\n",
+    "ssim_m = structural_similarity(img_moving, img_warped, data_range=img_fixed.max() - img_fixed.min())\n",
     "psnr_m = peak_signal_noise_ratio(img_moving, img_warped)\n",
     "\n",
     "print('\\nMoving to fixed image')\n",
